syntax = "proto3";
package soapbox;
option go_package = "proto";

import "soapbox.proto";

import "google/protobuf/timestamp.proto";

service Configurations {
    rpc ListConfigurations (ListConfigurationRequest) returns (ListConfigurationResponse) {}
    rpc GetLatestConfiguration (GetLatestConfigurationRequest) returns (Configuration) {}
    rpc CreateConfiguration (CreateConfigurationRequest) returns (Configuration) {}
    rpc DeleteConfiguration (DeleteConfigurationRequest) returns (soapbox.Empty) {}
}

message ListConfigurationRequest {
    int32 environment_id = 1;
}

message ListConfigurationResponse {
    repeated Configuration configs = 1;
}

message GetLatestConfigurationRequest {
    int32 environment_id = 1;
}

message Configuration {
    int32 environment_id = 1;
    int32 version = 2;
    google.protobuf.Timestamp created_at = 3;
    repeated ConfigVar config_vars = 4;
}

message ConfigVar {
    string name = 1;
    string value = 2;
}

message CreateConfigurationRequest {
    int32 environment_id = 1;
    repeated ConfigVar config_vars = 2;
}

message DeleteConfigurationRequest {
    int32 environment_id = 1;
    int32 version = 2;
}